--- a/css/blog.scss
+++ b/css/blog.scss
@@ -6,8 +6,16 @@
 
     &-grid {
         display: grid;
-        grid-template-columns: 2fr 1fr;
-        grid-template-rows: repeat(4, 100px);
+        grid-template-columns: 1fr;
+        grid-template-rows: 200px repeat(4,100px);
+
+        @media (min-width:768px) {
+
+            grid-template-columns: 2fr 1fr;
+            grid-template-rows: repeat(4, 100px);
+
+        }
+
         grid-gap: 10px;
 
         padding: 1em;
@@ -27,10 +35,24 @@
             }
 
             &-main {
-                grid-row: span 4;
+
+                grid-row: auto;
+
+                @media (min-width:768px) {
+
+                    grid-row: span 4;
+                    
+                }
 
                 h3 {
-                    font-size: 1.6em;
+                    font-size: 1.2em;
+
+                    @media (min-width:768px) {
+
+                        font-size: 1.6em;
+                        
+                    }
+                    
                     line-height: 1.3em;
                 }
 
