--- a/css/footer.scss
+++ b/css/footer.scss
@@ -12,12 +12,35 @@
         color: white;
 
         .menu {
-            @include flexbox(row,wrap,space-between,flex-start);
+            @include flexbox(column-reverse,wrap,center,center);
+
+
+            @media (min-width:768px) {
+                @include flexbox(row,wrap,space-between,center);
+
+            }
+
+
+            //@include flexbox(row,wrap,space-between,flex-start);
             
             padding: 1.5em 1em;
 
             ul {
-                @include flexbox(row,wrap,flex-start,center);
+                @include flexbox(column,wrap,center,center);
+
+
+                @media (min-width:768px) {
+                    @include flexbox(row,wrap,flex-start,baseline);
+                    
+                }
+            }
+
+            li {
+                margin: 0.5em 0 0;
+
+                @media (min-width:768px) {
+                    margin: 0;
+                }
             }
             
             a {
@@ -26,6 +49,7 @@
                 font-size: 1.2em;
 
                 padding: 0.2em 0.6em;
+                
             }
 
             .main-link {
@@ -40,7 +64,13 @@
         }
 
         .bottom {
-            @include flexbox(row,nowrap,space-between,center);
+            @include flexbox(column,wrap,center,center);
+
+
+            @media (min-width:768px) {
+                @include flexbox(row,wrap,space-between,center);
+
+            }
 
             border-top: 1px solid rgba(white,.1);
             padding: 1em;
@@ -49,6 +79,12 @@
                 opacity: .4;
                 font-family: 'Helvetica';
                 font-size: 0.8em;
+                text-align: center;
+                margin-bottom: 10px;
+
+                @media (min-width:768px) {
+                    margin-bottom: 0;
+                }
             }
 
             .social-menu {
