--- a/css/rankings.scss
+++ b/css/rankings.scss
@@ -4,8 +4,16 @@
 
     &-grid {
         display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(4,1fr);
+
+        @media (min-width:768px) {
+
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: 1fr 1fr;
+
+        }
+        
         grid-gap: 1em;
 
         padding: 1em;
@@ -39,10 +47,12 @@
                 h2 {
                     font-size: 1.2em;
                     font-weight: 600;
+                    margin-bottom: 0.2em;
                     font-family: 'Century Gothic';
                 }
 
                 span {
+                    display: block;
                     font-family: 'Helvetica';
                     color: rgba(black,0.8);
                     font-size: 0.9em;
