--- a/template-parts/header.pug
+++ b/template-parts/header.pug
@@ -13,6 +13,12 @@ header
                         li Rankings
                     a(href="")
                         li Blog
+            .header-box-nav-search
+                .search-box
+                    input(type="text", placeholder="Buscar")
+                    button(type="submit").fas.fa-search
             .header-box-nav-login
                 a(href="/")
                     img(src="img/login-icon.png", alt="Log in")
+            .header-box-nav-menubutton
+                button.fas.fa-bars#mobile-menu-button
