--- a/css/responsive.scss
+++ b/css/responsive.scss
@@ -4,11 +4,6 @@
     }
 
     //header
-    .header-box-logo {
-        @include flexbox(row,nowrap,center,center);
-        
-        width: 100%;
-    }
 
     //Main News
 
@@ -41,20 +36,17 @@
 
 @media (min-width:320px){
     body {
-        background-color: green;
+        //background-color: green;
     }
 
     
 }
 @media (min-width:768px){
     body {
-        background-color: yellow;
+        //background-color: yellow;
     }
 
     //header
-    .header-box-logo {
-        width: auto;
-    }
 
     //Main News
 
@@ -74,7 +66,7 @@
 }
 @media (min-width:1024px){
 	body {
-        background-color: red;
+        //background-color: red;
     }
 
     //Main News
