--- a/css/style.scss
+++ b/css/style.scss
@@ -12,3 +12,8 @@
 
 @import 'responsive';
 @import 'menu-mobile';
+
+@import 'post-content';
+@import 'author';
+@import 'similar-posts';
+@import 'comments';
