--- a/template-parts/posts.pug
+++ b/template-parts/posts.pug
@@ -5,7 +5,7 @@
             span Ver todo
     .posts-box-grid
         - for (var i = 0; i < 10; ++i) {
-            a(href="/")
+            a(href="entrada.html")
                 .post-item
                     img(src="img/shingeki.jpg", alt="")
                     div.post-item-content
