--- a/css/style.css
+++ b/css/style.css
@@ -1139,4 +1139,181 @@ header {
         .menu-mobile-box .mobile-menu ul a li:hover {
           background-color: #FF7E4E; }
 
+.post-content {
+  background-color: #FDFDFD;
+  width: 100%; }
+  .post-content-header {
+    position: relative; }
+    .post-content-header img {
+      width: 100%;
+      height: 400px;
+      -o-object-fit: cover;
+         object-fit: cover; }
+    .post-content-header .post-title {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      -ms-flex-wrap: nowrap;
+          flex-wrap: nowrap;
+      -webkit-box-pack: end;
+          -ms-flex-pack: end;
+              justify-content: flex-end;
+      -webkit-box-align: stretch;
+          -ms-flex-align: stretch;
+              align-items: stretch;
+      position: absolute;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background: -webkit-gradient(linear, left top, left bottom, from(transparent), to(black));
+      background: linear-gradient(transparent, black);
+      padding: 1em; }
+      .post-content-header .post-title h2 {
+        color: white;
+        font-family: 'Poppins';
+        font-weight: 300;
+        font-size: 2em;
+        line-height: 1.3em;
+        font-weight: bold; }
+  .post-content-body {
+    max-width: 100%;
+    padding: 2em 2em; }
+    .post-content-body .post-author {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: row;
+              flex-direction: row;
+      -ms-flex-wrap: nowrap;
+          flex-wrap: nowrap;
+      -webkit-box-pack: justify;
+          -ms-flex-pack: justify;
+              justify-content: space-between;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center; }
+      .post-content-body .post-author .post-tag {
+        color: white;
+        background-color: #FF7E4E;
+        padding: 0.2em 0.8em;
+        font-family: 'Century Gothic';
+        font-weight: bold;
+        text-transform: uppercase;
+        font-size: 0.9em; }
+      .post-content-body .post-author a {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: row;
+                flex-direction: row;
+        -ms-flex-wrap: nowrap;
+            flex-wrap: nowrap;
+        -webkit-box-pack: start;
+            -ms-flex-pack: start;
+                justify-content: flex-start;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center; }
+        .post-content-body .post-author a img {
+          border: 1px solid #FF7E4E;
+          border-radius: 10em;
+          width: 2.5em;
+          height: 2.5em;
+          -o-object-fit: cover;
+             object-fit: cover; }
+        .post-content-body .post-author a span {
+          color: rgba(255, 126, 78, 0.8);
+          font-family: 'Century Gothic';
+          margin-right: 0.5em; }
+    .post-content-body .post-text p {
+      color: #0B0B0B;
+      font-family: 'Helvetica';
+      font-size: 1.2em;
+      line-height: 1.2em; }
+    .post-content-body .post-text img {
+      width: 100%; }
+
+.author-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #FDFDFD;
+  padding: 2em; }
+  .author-box img {
+    width: 7em;
+    height: 7em;
+    -o-object-fit: cover;
+       object-fit: cover;
+    border-radius: 20em; }
+  .author-box .author-desc {
+    margin-left: 2em; }
+    .author-box .author-desc h3 {
+      margin-bottom: 0.5em;
+      font-size: 1.3em;
+      font-weight: 300;
+      font-family: 'Century Gothic'; }
+    .author-box .author-desc p {
+      font-family: 'Helvetica';
+      color: rgba(0, 0, 0, 0.7);
+      font-size: 0.9em; }
+
+.similar-posts-box {
+  background-color: #FDFDFD;
+  padding: 1.5em; }
+  .similar-posts-box h3 {
+    font-family: 'Century Gothic';
+    font-weight: bold;
+    font-size: 1.1em;
+    text-transform: uppercase;
+    font-style: italic;
+    opacity: 0.7; }
+  .similar-posts-box-items {
+    display: grid;
+    grid-gap: 1em;
+    grid-template-columns: 1fr 1fr 1fr;
+    margin-top: 1em; }
+    .similar-posts-box-items img {
+      width: 100%;
+      height: 8em;
+      -o-object-fit: cover;
+         object-fit: cover; }
+    .similar-posts-box-items h4 {
+      font-size: 1em;
+      line-height: 1.2em;
+      font-family: 'Century Gothic'; }
+
+.comments-box {
+  background-color: #FDFDFD;
+  padding: 1.5em; }
+  .comments-box h3 {
+    font-family: 'Century Gothic';
+    font-weight: bold;
+    font-size: 1.1em;
+    text-transform: uppercase;
+    font-style: italic;
+    opacity: 0.7; }
+  .comments-box p {
+    font-family: 'Helvetica';
+    padding: 3em; }
+
 /*# sourceMappingURL=style.css.map */
